sass/_acf-forms.scss
.acf-field .acf-label label {
	font-size: 1.2rem;
	line-height: 1.6;
}

form.acf-form { 
	
	input {
		background: white;
		padding: 18px 24px;
		border: 1px solid darken($gray, 15%);
	}

	.course-date {
		width: 50%;
		float: left;
	}

	.instructor-field {
		clear: both;
	}
}

.acf-form input[type="text"],
.acf-form input[type="password"],
.acf-form input[type="number"],
.acf-form input[type="search"],
.acf-form input[type="email"],
.acf-form input[type="url"] {
	height: 16px * 2.5;
	padding: 8px 15px;
}

.hide-me {
	margin: 0; padding: 0;
}

.acf-form-submit.acf-form-submit {
	
	width: 400px;
	position: relative;
	margin: 16px 0;

	input[type="submit"] {
		@extend %cool-button;
		padding: 8px 12px;
		font-size: 1.1rem;
		color: white;
		display: block;
		background-color: $cool-green;
		width: 200px;
	}

}

.acf-input.acf-input {
	position: relative;

	.acf-error-message {
		position: absolute;
		top: -105%;
		z-index: 1;
		margin: 0;
	}
}

span.acf-spinner.acf-spinner.acf-spinner {
	position: absolute; 
	top: 12px;
	left: 25px;
	width: 175px;
    background: $cool-green url(../images/create-new-cert-spinner.gif) no-repeat 50% 50%;
    z-index: 100;
}

.acf-fields > .acf-field {
	padding: 0;
	margin-bottom: 16px * 2;
	border-top: none;
}

.acf-field.acf-field {
	&.hidden {
		display: none;
	}
	border-bottom: 1px solid lighten($gray, 10%);
	border-top-width: 0;
	padding-bottom: 40px;
	margin-bottom: 40px;
	min-height: 110px;
}

.updated {
	padding: 10px 20px;
	background: lighten($cool-green, 30%);
	border: 1px solid $cool-green;
	width: 30%;

	margin-bottom: 32px;

	p {
		margin: 0;
	}
}

.acf-field[data-width] + .acf-field[data-width] {
	border-left-width: 0;
}

li a {
	cursor: pointer;
}

ul.acf-radio-list li, ul.acf-checkbox-list li {
	width: 50%;
	display: inline-block;

	input {
		width: inherit;
	}
}

.acf-button {
	@extend %cool-button;
	background: $cool-green;
}

table.acf-table {
	thead {

		tr {
			
			th { 
				color: white;
				background: $pmts-blue;
				font-weight: bold; 
				padding: 1em 2em;
				font-size: 12px;
			}
		}
	}

	tr td.acf-field {
		vertical-align: middle;
		padding: 10px;

		input {
			height: 30px;
		}
	}
}

.acf-field-message.acf-field-message.acf-field-message {
	border: none;

	.acf-label label {
		text-align: center;
		font-size: 1.5em;
	}
}

.acf-label.acf-label.acf-label {
	margin-bottom: 0;
}

.acf-field.acf-field-text.acf-field-58839d6ee115e.acf-r0 {
	background: darken($pmts-blue, 2%);
	label {
		color: white;

		.fa-id-card-o {
			font-size: 1.2em;
		}
	}
}

